--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">HelloWorld</string>
+    <string name="app_name">我的应用作品集</string>
+    <string name="file">热门电影</string>
+    <string name="share">股票雄鹰</string>
+    <string name="reader">XYZ阅读器</string>
+    <string name="news">最新闻</string>
+    <string name="design">毕业设计</string>
+     <string name="text_desc">纳米学位应用</string>
 </resources>
